Added Service and Worker Entities and the repos, services and controllers, updated customer and booking services with required changes

--- a/BackEnd/Spring Boot/src/main/resources/application.properties
+++ b/BackEnd/Spring Boot/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url= jdbc:h2:file:~/test
+#spring.datasource.username=blah
+#spring.datasouce.password =
+spring.datasource.driver-class-name=org.h2.Driver
 
+spring.h2.console.path=/h2-console
+Spring.h2.console.enabled=true
+Spring.jpa.show-sql=true
