--- a/BackEnd/SpringBoot/src/main/resources/application.properties
+++ b/BackEnd/SpringBoot/src/main/resources/application.properties
@@ -1,8 +1,24 @@
 spring.datasource.url= jdbc:h2:file:~/test
-#spring.datasource.username=blah
-#spring.datasouce.password =
+##spring.datasource.username=blah
+##spring.datasouce.password =
 spring.datasource.driver-class-name=org.h2.Driver
-
 spring.h2.console.path=/h2-console
 Spring.h2.console.enabled=true
 Spring.jpa.show-sql=true
+
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url= jdbc:mysql://database-1.c2rbzulg4rgn.us-east-1.rds.amazonaws.com:3306
+#
+#spring.datasouce.password=sept-password
+#spring.datasource.username=sept-admin
+#
+#
+#
+#cloud.aws.credentials.accessKey=
+#cloud.aws.credentials.secretKey=
+#cloud.aws.region.static=us-east-1
+#
+#cloud.aws.rds.database-1.password=sept-password
+#cloud.aws.rds.database-1.username=sept-admin
+
+
